# Haptics

./: CMakeLists.txt
resources/: frag.glsl  input.json  trained.pt  vert.glsl
scripts/: cpp_jf_10000.mat  cpp_jf_5000.mat  cpp_jf_50000.mat  cpp_random_10000.mat  cpp_random_50000.mat  cpp_random_sample_50000.mat  cpp_test_1800.mat  cpp_test_4500.mat  cpp_test_900.mat  cpp_train_900.mat  matlab_100.mat  matlab_10000.mat  matlab_400.mat  play.py  rand_10000.mat  rand_900.mat
src/: Body.cpp  Body.h  BodyCuboid.cpp  BodyCuboid.h  Camera.cpp  Comp.h  CompCylinder.cpp  CompCylinder.h  CompDoubleCylinder.cpp  CompDoubleCylinder.h  CompNull.h  CompSphere.cpp  CompSphere.h  Constraint.cpp  Constraint.h  ConstraintAttachSpring.cpp  ConstraintAttachSpring.h  ConstraintJointLimit.cpp  ConstraintJointLimit.h  ConstraintLoop.cpp  ConstraintLoop.h  ConstraintNull.h  ConstraintPrescBody.cpp  ConstraintPrescBody.h  ConstraintPrescBodyAttachPoint.cpp  ConstraintPrescBodyAttachPoint.h  ConstraintPrescJoint.cpp  ConstraintPrescJoint.h  Deformable.cpp  Deformable.h  DeformableNull.h  DeformableSpring.cpp  DeformableSpring.h  EigenOdeintHelper.h  GLSL.cpp  Joint.cpp  Joint.h  JointFixed.h  JointFree.h  JointHyperReduced.h  (+60 more)
test/Haptics-test/: Haptics-test.vcxproj  test.cpp
